# data_scientist_assesment

./: .gitignore
risk_model/: README.md  clair_risk_model.ipynb  pyproject.toml  stakeholder_summary.md
